# smartmutate

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  smartMutate.py
ouput/: oooo.csv
sample_data/: sample.json
smartMutator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: __init__.py  api.py  cli.py  engine.py  fileHandler.py  fileProcessor.py  registry.py
src/handlers/: __init__.py  csv_handler.py  json_handler.py  yaml_handler.py
src/smartMutator/cli/: convertCLI.py
src/smartMutator/core/: api.py  engine.py  fileHandler.py  registry.py
src/smartMutator/handlers/: __init__.py  base_handler.py  json_handler.py
src/smartmutate/: __init__.py  __main__.py  api.py  converter.py  engine.py  file_processor.py  loading_animation.py
tests/: test_converter.py  test_engine.py
